# realtor-site

./: .gitignore  README.md  package.json
backend/: pyproject.toml
backend/api/: serializers.py  views.py
backend/backend/: settings.py  urls.py
backend/core/: models.py
backend/core/migrations/: 0001_initial.py  0002_alter_advert_image.py  0003_alter_advert_image.py
public/: index.html
src/: App.js  index.css
src/components/: ContactMessage.jsx  Image.jsx
src/components/About/: About.jsx  style.css
src/components/Contact/: Contact.jsx  style.css
src/components/Footer/: Footer.jsx  style.css
src/components/Home/: Element.jsx  Home.jsx  Jumbotron.jsx  style.css
src/components/Navbar/: Navbar.jsx  style.css
src/components/Portfolios/: Portfolios.jsx  style.css
src/translation/: i18next.js  translationData.js
